[package]
name = "chairgod"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4.26", features = ["serde"] }
dotenvy = "0.15"
itertools = "0.11"
lazy-regex = "3"
serde = { version = "1", features = ["derive"] }
sled = "0.34"
tokio = { version = "1", features = ["full"] }
env_struct = "0.1"
rand = "0.8"

tracing = "0.1"
tracing-subscriber = "0.3"
color-eyre = "0.6"

twilight-cache-inmemory = { version = "0.15", features = ["permission-calculator"] }
twilight-gateway = { version = "0.15", features = ["native"] }
twilight-http = { version = "0.15", features = ["native"] }
twilight-model = "0.15"
twilight-util = { version = "0.15", features = ["builder", "permission-calculator", "snowflake"] }
# 3rd party
twilight-interactions = "0.15"

uuid = { version = "1.4", features = ["serde", "v4"] }

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true
